--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <title>Guía Canina Viva | Salud y cuidados para tu perro</title>
   <meta name="description" content="Consejos de salud, alimentación y comportamiento para perros. Aprende a cuidar mejor a tu perro.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
