--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
     <p>Salud, cuidados y comportamiento para tu perro</p>
   </header>
 
-  <img src="https://images.unsplash.com/photo-1548199973-03cce0bbc87b"
-       alt="Perro feliz y saludable"
-       class="hero-img">
+<img src="https://images.unsplash.com/photo-1548199973-03cce0bbc87b" alt="Perro feliz y saludable" class="hero-img">
 
 
   <main>
