--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
     <p>Salud, cuidados y comportamiento para tu perro</p>
   </header>
 
-<div class="hero-img"></div>
+<img src="https://images.unsplash.com/photo-1518717758536-85ae29035b6d"
+     alt="Perro sano y feliz"
+     class="hero-img">
+
 
 
 
