--- a/index.html
+++ b/index.html
@@ -3,53 +3,160 @@
 <head>
   <meta charset="UTF-8">
   <title>Guía Canina Viva | Salud y cuidados para tu perro</title>
-  <meta name="description" content="Consejos de salud, alimentación y comportamiento para perros. Aprende a cuidar mejor a tu perro.">
+  <meta name="description" content="Guía completa sobre la salud, alimentación y comportamiento de los perros. Aprende por qué ocurren ciertos problemas y qué hacer en cada caso.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+
   <header>
     <h1>Guía Canina Viva</h1>
-    <p>Salud, cuidados y comportamiento para tu perro</p>
+    <p>Información clara y útil sobre la salud y el comportamiento de tu perro</p>
   </header>
 
-<img src="https://images.unsplash.com/photo-1518717758536-85ae29035b6d?new=3"
-     alt="Perro sano y feliz"
-     class="hero-img">
-
-
-
-
-
-
   <main>
+
+    <!-- CASO 1 -->
     <article>
       <h2>¿Por qué mi perro no quiere comer?</h2>
+
       <p>
-        La falta de apetito en los perros puede deberse a estrés, cambios en la rutina
-        o problemas digestivos. Observa si hay otros síntomas.
+        La falta de apetito en los perros es una de las preocupaciones más comunes.
+        Puede deberse a causas leves o ser el primer signo de un problema de salud.
+      </p>
+
+      <h3>Posibles causas</h3>
+      <p>
+        Estrés, cambios en la rutina, calor, dolor dental, problemas digestivos,
+        infecciones, parásitos o incluso aburrimiento con la comida.
+      </p>
+
+      <h3>¿Qué puedes hacer?</h3>
+      <p>
+        Observa si tu perro bebe agua y mantiene un comportamiento normal.
+        Puedes probar a ofrecer comida más apetecible o mantener horarios fijos.
+      </p>
+
+      <h3>Cuándo acudir al veterinario</h3>
+      <p>
+        Si no come durante más de 24–48 horas, muestra apatía, vómitos o diarrea,
+        es recomendable acudir al veterinario.
       </p>
     </article>
 
+    <!-- CASO 2 -->
     <article>
-      <h2>Alimentos prohibidos para perros</h2>
+      <h2>Mi perro tiene diarrea</h2>
+
       <p>
-        Chocolate, cebolla, ajo, uvas y alcohol pueden ser muy peligrosos para los perros.
+        La diarrea puede aparecer por cambios en la alimentación, estrés o
+        ingestión de algo en mal estado.
+      </p>
+
+      <h3>Por qué ocurre</h3>
+      <p>
+        Cambios bruscos de comida, intolerancias alimentarias, infecciones,
+        parásitos o intoxicaciones.
+      </p>
+
+      <h3>Qué hacer en casa</h3>
+      <p>
+        Mantén a tu perro hidratado y, si el veterinario lo recomienda,
+        ayuno breve seguido de dieta blanda.
+      </p>
+
+      <h3>Cuándo preocuparse</h3>
+      <p>
+        Si hay sangre, fiebre, vómitos persistentes o la diarrea dura más de 48 horas,
+        acude al veterinario.
       </p>
     </article>
 
+    <!-- CASO 3 -->
     <article>
-      <h2>Señales de estrés en perros</h2>
+      <h2>Señales de estrés en los perros</h2>
+
       <p>
-        Jadeo excesivo, temblores o conductas destructivas pueden indicar estrés.
+        El estrés afecta tanto a la salud física como emocional del perro.
+      </p>
+
+      <h3>Señales más comunes</h3>
+      <p>
+        Jadeo excesivo, temblores, destrucción de objetos, ladridos constantes,
+        falta de apetito o aislamiento.
+      </p>
+
+      <h3>Qué puedes hacer</h3>
+      <p>
+        Mantén rutinas estables, ejercicio diario, estimulación mental
+        y evita situaciones que generen ansiedad.
       </p>
     </article>
+
+    <!-- CASO 4 -->
+    <article>
+      <h2>Vómitos en perros: causas frecuentes</h2>
+
+      <p>
+        Los vómitos ocasionales pueden no ser graves, pero cuando se repiten
+        requieren atención.
+      </p>
+
+      <h3>Por qué vomita mi perro</h3>
+      <p>
+        Comer demasiado rápido, cuerpos extraños, gastritis, infecciones,
+        intoxicaciones o enfermedades internas.
+      </p>
+
+      <h3>Cuándo es urgente</h3>
+      <p>
+        Si el vómito es persistente, contiene sangre o va acompañado de debilidad,
+        acude al veterinario inmediatamente.
+      </p>
+    </article>
+
+    <!-- FAQ -->
+    <section>
+      <h2>Preguntas frecuentes sobre la salud canina</h2>
+
+      <article>
+        <h3>¿Es normal que mi perro esté más cansado algunos días?</h3>
+        <p>
+          Sí, puede ser normal, pero si el cansancio es prolongado o empeora,
+          conviene revisarlo.
+        </p>
+      </article>
+
+      <article>
+        <h3>¿Cada cuánto debo desparasitar a mi perro?</h3>
+        <p>
+          Generalmente cada 3 meses, aunque depende del entorno y las indicaciones
+          del veterinario.
+        </p>
+      </article>
+
+      <article>
+        <h3>¿El estrés puede causar enfermedades?</h3>
+        <p>
+          Sí, el estrés prolongado puede debilitar el sistema inmunológico
+          del perro.
+        </p>
+      </article>
+
+      <article>
+        <h3>¿Qué hago si mi perro come algo peligroso?</h3>
+        <p>
+          Contacta inmediatamente con un veterinario, incluso si no presenta síntomas.
+        </p>
+      </article>
+    </section>
+
   </main>
 
   <footer>
-    <p>© 2025 Guía Canina Viva</p>
+    <p>© 2025 Guía Canina Viva · Información orientativa, no sustituye al veterinario</p>
   </footer>
+
 </body>
 </html>
