--- a/index.html
+++ b/index.html
@@ -111,5 +111,39 @@
          class="content-img">
 
     <!-- FAQ -->
-    <section>
-      <h2>Preguntas frecuente
+    <section class="faq">
+      <h2>Preguntas frecuentes sobre la salud canina</h2>
+
+      <div class="faq-item">
+        <h3>¿Es normal que mi perro esté más cansado algunos días?</h3>
+        <p>
+          Sí, puede ser normal. Si el cansancio es persistente o empeora,
+          conviene consultar con un veterinario.
+        </p>
+      </div>
+
+      <div class="faq-item">
+        <h3>¿Qué hago si mi perro come algo peligroso?</h3>
+        <p>
+          Contacta inmediatamente con un veterinario, incluso si no presenta
+          síntomas visibles.
+        </p>
+      </div>
+
+      <div class="faq-item">
+        <h3>¿El estrés puede causar enfermedades?</h3>
+        <p>
+          Sí, el estrés prolongado puede debilitar el sistema inmunológico
+          y provocar problemas digestivos o de comportamiento.
+        </p>
+      </div>
+    </section>
+
+  </main>
+
+  <footer>
+    <p>© 2025 Guía Canina Viva · Información orientativa, no sustituye al veterinario</p>
+  </footer>
+
+</body>
+</html>
