--- a/index.html
+++ b/index.html
@@ -17,125 +17,131 @@
 
   <main>
 
-    <!-- CASO 1 -->
+    <!-- ARTÍCULO 1 -->
     <article>
       <h2>¿Por qué mi perro no quiere comer?</h2>
-
-      <p>
-        La falta de apetito en los perros es una de las preocupaciones más comunes.
-        Puede deberse a causas leves o ser el primer signo de un problema de salud.
-      </p>
+      <p>La falta de apetito en los perros es una de las preocupaciones más comunes.</p>
 
       <h3>Por qué ocurre</h3>
-      <p>
-        Estrés, cambios en la rutina, calor, dolor dental, problemas digestivos,
-        infecciones, parásitos o aburrimiento con la comida.
-      </p>
+      <p>Estrés, cambios en la rutina, calor, dolor dental, problemas digestivos, infecciones o parásitos.</p>
 
       <h3>Qué puedes hacer</h3>
-      <p>
-        Observa si tu perro bebe agua y mantiene un comportamiento normal.
-        Mantén horarios fijos y evita cambios bruscos en su alimentación.
-      </p>
+      <p>Mantén horarios fijos y observa si el perro bebe agua y mantiene un comportamiento normal.</p>
 
       <h3>Cuándo acudir al veterinario</h3>
-      <p>
-        Si no come durante más de 24–48 horas o aparecen vómitos,
-        diarrea o apatía, acude al veterinario.
-      </p>
+      <p>Si no come durante más de 24–48 horas o aparecen otros síntomas.</p>
     </article>
 
-    <!-- IMAGEN 1 -->
     <img src="https://images.unsplash.com/photo-1518717758536-85ae29035b6d?auto=format&fit=crop&w=1200&q=80"
          alt="Perro sano y tranquilo en casa"
          class="content-img">
 
-    <!-- CASO 2 -->
+    <!-- ARTÍCULO 2 -->
     <article>
       <h2>Mi perro tiene diarrea</h2>
-
-      <p>
-        La diarrea es un problema frecuente que puede aparecer de forma puntual
-        o ser señal de un trastorno más serio.
-      </p>
+      <p>La diarrea puede aparecer por causas leves o ser señal de un problema mayor.</p>
 
       <h3>Por qué ocurre</h3>
-      <p>
-        Cambios de comida, ingestión de algo en mal estado,
-        intolerancias alimentarias, infecciones o parásitos.
-      </p>
+      <p>Cambios de comida, intolerancias, infecciones o parásitos.</p>
 
-      <h3>Qué hacer en casa</h3>
-      <p>
-        Mantén a tu perro hidratado y consulta con el veterinario
-        antes de aplicar ayunos o dietas blandas.
-      </p>
+      <h3>Qué hacer</h3>
+      <p>Hidrata bien al perro y consulta con el veterinario antes de aplicar dietas.</p>
 
       <h3>Cuándo preocuparse</h3>
-      <p>
-        Si la diarrea dura más de 48 horas, hay sangre o el perro
-        se muestra decaído, es importante acudir al veterinario.
-      </p>
+      <p>Si dura más de 48 horas o aparece sangre.</p>
     </article>
 
-    <!-- IMAGEN 2 -->
     <img src="https://images.unsplash.com/photo-1601758125946-6ec2ef64daf8?auto=format&fit=crop&w=1200&q=80"
          alt="Alimentación adecuada para perros"
          class="content-img">
 
-    <!-- CASO 3 -->
+    <!-- ARTÍCULO 3 -->
     <article>
       <h2>Señales de estrés y nerviosismo en los perros</h2>
-
-      <p>
-        El estrés puede afectar seriamente a la salud física y emocional
-        de los perros, especialmente cuando se prolonga en el tiempo.
-      </p>
+      <p>El estrés afecta tanto a la salud física como emocional.</p>
 
       <h3>Señales más comunes</h3>
-      <p>
-        Temblores, jadeo excesivo, destrucción de objetos,
-        ladridos constantes o cambios en el apetito.
-      </p>
+      <p>Jadeo excesivo, temblores, destrucción de objetos o cambios de apetito.</p>
 
       <h3>Qué puedes hacer</h3>
-      <p>
-        Mantén rutinas estables, proporciona ejercicio diario,
-        estimulación mental y un entorno tranquilo.
-      </p>
+      <p>Rutinas estables, ejercicio diario y estimulación mental.</p>
     </article>
 
-    <!-- IMAGEN 3 -->
     <img src="https://images.unsplash.com/photo-1558788353-f76d92427f16?auto=format&fit=crop&w=1200&q=80"
-         alt="Perro nervioso en casa mostrando signos de estrés"
+         alt="Perro nervioso en casa"
          class="content-img">
+
+    <!-- ARTÍCULO 4 -->
+    <article>
+      <h2>Mi perro vomita</h2>
+      <p>Los vómitos pueden ser puntuales o indicar un problema más serio.</p>
+
+      <h3>Por qué ocurre</h3>
+      <p>Comer rápido, infecciones, intoxicaciones o cuerpos extraños.</p>
+
+      <h3>Qué hacer</h3>
+      <p>Retira comida unas horas y observa el estado general.</p>
+
+      <h3>Cuándo acudir al veterinario</h3>
+      <p>Si el vómito es persistente o contiene sangre.</p>
+    </article>
+
+    <!-- ARTÍCULO 5 -->
+    <article>
+      <h2>Mi perro se rasca mucho</h2>
+      <p>El picor puede afectar seriamente al bienestar del perro.</p>
+
+      <h3>Por qué ocurre</h3>
+      <p>Parásitos, alergias, infecciones o piel seca.</p>
+
+      <h3>Qué hacer</h3>
+      <p>Revisa la piel y mantén la desparasitación al día.</p>
+
+      <h3>Cuándo acudir al veterinario</h3>
+      <p>Si hay heridas, enrojecimiento o pérdida de pelo.</p>
+    </article>
+
+    <!-- ARTÍCULO 6 -->
+    <article>
+      <h2>Ansiedad por separación en perros</h2>
+      <p>Ocurre cuando el perro sufre al quedarse solo.</p>
+
+      <h3>Señales</h3>
+      <p>Ladridos excesivos, destrucción y nerviosismo.</p>
+
+      <h3>Qué hacer</h3>
+      <p>Acostumbrar a ausencias cortas y evitar despedidas exageradas.</p>
+    </article>
+
+    <!-- ARTÍCULO 7 -->
+    <article>
+      <h2>Cómo saber si mi perro tiene fiebre</h2>
+      <p>La fiebre es señal de que algo no va bien.</p>
+
+      <h3>Por qué ocurre</h3>
+      <p>Infecciones, inflamaciones o enfermedades internas.</p>
+
+      <h3>Qué hacer</h3>
+      <p>No administrar medicamentos humanos y acudir al veterinario.</p>
+    </article>
 
     <!-- FAQ -->
     <section class="faq">
       <h2>Preguntas frecuentes sobre la salud canina</h2>
 
       <div class="faq-item">
-        <h3>¿Es normal que mi perro esté más cansado algunos días?</h3>
-        <p>
-          Sí, puede ser normal. Si el cansancio es persistente o empeora,
-          conviene consultar con un veterinario.
-        </p>
+        <h3>¿Es normal que mi perro esté más cansado?</h3>
+        <p>Sí, pero si el cansancio es prolongado conviene revisarlo.</p>
       </div>
 
       <div class="faq-item">
         <h3>¿Qué hago si mi perro come algo peligroso?</h3>
-        <p>
-          Contacta inmediatamente con un veterinario, incluso si no presenta
-          síntomas visibles.
-        </p>
+        <p>Contacta inmediatamente con un veterinario.</p>
       </div>
 
       <div class="faq-item">
         <h3>¿El estrés puede causar enfermedades?</h3>
-        <p>
-          Sí, el estrés prolongado puede debilitar el sistema inmunológico
-          y provocar problemas digestivos o de comportamiento.
-        </p>
+        <p>Sí, puede debilitar el sistema inmunológico.</p>
       </div>
     </section>
 
