--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Guía Canina Viva | Salud y cuidados para tu perro</title>
-  <meta name="description" content="Guía completa sobre la salud, alimentación y comportamiento de los perros. Aprende por qué ocurren ciertos problemas y qué hacer en cada caso.">
+  <meta name="description" content="Guía completa sobre la salud y el comportamiento de los perros.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -12,162 +12,59 @@
 
 <header>
   <h1>Guía Canina Viva</h1>
-  <p>Información clara y útil sobre la salud y el comportamiento de tu perro</p>
+  <p>Información clara sobre la salud y el comportamiento de tu perro</p>
 </header>
 
 <main>
 
-  <!-- ARTÍCULO 1 -->
   <article>
-    <h2>¿Por qué mi perro no quiere comer?</h2>
-    <p>La falta de apetito en los perros es una de las preocupaciones más comunes.</p>
-
-    <h3>Por qué ocurre</h3>
-    <p>Estrés, cambios en la rutina, calor, dolor dental, problemas digestivos o infecciones.</p>
-
-    <h3>Qué puedes hacer</h3>
-    <p>Mantén horarios fijos y observa su comportamiento general.</p>
-
-    <h3>Cuándo acudir al veterinario</h3>
-    <p>Si no come durante más de 24–48 horas o aparecen otros síntomas.</p>
+    <h2>Mi perro no quiere comer</h2>
+    <p>Causas frecuentes y qué hacer.</p>
+    <a href="no-quiere-comer.html">Leer artículo →</a>
   </article>
 
-  <img src="https://images.unsplash.com/photo-1518717758536-85ae29035b6d?auto=format&fit=crop&w=1200&q=80"
-       alt="Perro sano y tranquilo en casa"
-       class="content-img">
-
-  <!-- ARTÍCULO 2 -->
   <article>
-    <h2>Mi perro tiene diarrea</h2>
-    <p>La diarrea puede aparecer por causas leves o ser señal de un problema mayor.</p>
-
-    <h3>Por qué ocurre</h3>
-    <p>Cambios de comida, intolerancias, infecciones o parásitos.</p>
-
-    <h3>Qué hacer</h3>
-    <p>Hidrata bien al perro y consulta con el veterinario.</p>
-
-    <h3>Cuándo preocuparse</h3>
-    <p>Si dura más de 48 horas o aparece sangre.</p>
+    <h2>Diarrea en perros</h2>
+    <p>Motivos, tratamiento y cuándo preocuparse.</p>
+    <a href="diarrea-en-perros.html">Leer artículo →</a>
   </article>
 
-  <img src="https://images.unsplash.com/photo-1601758125946-6ec2ef64daf8?auto=format&fit=crop&w=1200&q=80"
-       alt="Alimentación adecuada para perros"
-       class="content-img">
-
-  <!-- ARTÍCULO 3 -->
   <article>
-    <h2>Señales de estrés y nerviosismo en los perros</h2>
-    <p>El estrés afecta tanto a la salud física como emocional del perro.</p>
-
-    <h3>Señales más comunes</h3>
-    <p>Jadeo excesivo, temblores, destrucción de objetos o cambios de apetito.</p>
-
-    <h3>Qué puedes hacer</h3>
-    <p>Rutinas estables, ejercicio diario y estimulación mental.</p>
+    <h2>Estrés en perros</h2>
+    <p>Señales de estrés y cómo ayudar.</p>
+    <a href="estres-en-perros.html">Leer artículo →</a>
   </article>
 
-  <img src="https://images.unsplash.com/photo-1558788353-f76d92427f16?auto=format&fit=crop&w=1200&q=80"
-       alt="Perro nervioso en casa mostrando estrés"
-       class="content-img">
-
-  <!-- ARTÍCULO 4 -->
   <article>
-    <h2>Mi perro vomita</h2>
-    <p>Los vómitos pueden ser puntuales o indicar un problema más serio.</p>
-
-    <h3>Por qué ocurre</h3>
-    <p>Comer rápido, infecciones, intoxicaciones o cuerpos extraños.</p>
-
-    <h3>Qué hacer</h3>
-    <p>Retira comida unas horas y observa su estado.</p>
-
-    <h3>Cuándo acudir al veterinario</h3>
-    <p>Si el vómito es persistente o contiene sangre.</p>
+    <h2>Ansiedad por separación</h2>
+    <p>Qué es y cómo tratarla.</p>
+    <a href="ansiedad-separacion.html">Leer artículo →</a>
   </article>
 
-  <img src="https://images.unsplash.com/photo-1525253086316-d0c936c814f8?auto=format&fit=crop&w=1200&q=80"
-       alt="Perro con malestar estomacal"
-       class="content-img">
-
-  <!-- ARTÍCULO 5 -->
   <article>
-    <h2>Mi perro se rasca mucho</h2>
-    <p>El picor puede afectar seriamente al bienestar del perro.</p>
-
-    <h3>Por qué ocurre</h3>
-    <p>Parásitos, alergias, infecciones de piel o sequedad.</p>
-
-    <h3>Qué hacer</h3>
-    <p>Revisa la piel y mantén la desparasitación al día.</p>
-
-    <h3>Cuándo acudir al veterinario</h3>
-    <p>Si hay heridas o pérdida de pelo.</p>
+    <h2>Vómitos en perros</h2>
+    <p>Causas comunes y cuándo acudir al veterinario.</p>
+    <a href="vomitos-en-perros.html">Leer artículo →</a>
   </article>
 
-  <img src="https://images.unsplash.com/photo-1548199973-03cce0bbc87b?auto=format&fit=crop&w=1200&q=80"
-       alt="Perro rascándose por picor"
-       class="content-img">
-
-  <!-- ARTÍCULO 6 -->
   <article>
-    <h2>Ansiedad por separación en perros</h2>
-    <p>Ocurre cuando el perro sufre estrés intenso al quedarse solo.</p>
-
-    <h3>Señales</h3>
-    <p>Ladridos excesivos, destrucción de objetos y nerviosismo.</p>
-
-    <h3>Qué hacer</h3>
-    <p>Acostumbrar a ausencias cortas y evitar despedidas exageradas.</p>
+    <h2>Picor y rascado excesivo</h2>
+    <p>Alergias, parásitos y otros motivos.</p>
+    <a href="picor-en-perros.html">Leer artículo →</a>
   </article>
 
-  <!-- IMAGEN CORREGIDA (NO FALLA) -->
-  <img src="https://images.unsplash.com/photo-1583511655826-05700d52f4d9?auto=format&fit=crop&w=1200&q=80"
-       alt="Perro solo en casa mostrando ansiedad"
-       class="content-img">
-
-  <!-- ARTÍCULO 7 -->
   <article>
-    <h2>Cómo saber si mi perro tiene fiebre</h2>
-    <p>La fiebre es señal de que algo no va bien en su organismo.</p>
-
-    <h3>Por qué ocurre</h3>
-    <p>Infecciones, inflamaciones o enfermedades internas.</p>
-
-    <h3>Qué hacer</h3>
-    <p>No administrar medicamentos humanos y acudir al veterinario.</p>
+    <h2>Fiebre en perros</h2>
+    <p>Cómo detectarla y qué hacer.</p>
+    <a href="fiebre-en-perros.html">Leer artículo →</a>
   </article>
-
-  <img src="https://images.unsplash.com/photo-1596492784531-6e6eb5ea9993?auto=format&fit=crop&w=1200&q=80"
-       alt="Perro decaído con posible fiebre"
-       class="content-img">
-
-  <!-- FAQ -->
-  <section class="faq">
-    <h2>Preguntas frecuentes sobre la salud canina</h2>
-
-    <div class="faq-item">
-      <h3>¿Es normal que mi perro esté más cansado?</h3>
-      <p>Sí, pero si el cansancio es prolongado conviene revisarlo.</p>
-    </div>
-
-    <div class="faq-item">
-      <h3>¿Qué hago si mi perro come algo peligroso?</h3>
-      <p>Contacta inmediatamente con un veterinario.</p>
-    </div>
-
-    <div class="faq-item">
-      <h3>¿El estrés puede causar enfermedades?</h3>
-      <p>Sí, puede debilitar el sistema inmunológico.</p>
-    </div>
-  </section>
 
 </main>
 
 <footer>
-  <p>© 2025 Guía Canina Viva · Información orientativa, no sustituye al veterinario</p>
+  <p>© 2025 Guía Canina Viva</p>
   <p>
-    <a href="privacidad.html">Política de privacidad</a> |
+    <a href="privacidad.html">Privacidad</a> |
     <a href="aviso-legal.html">Aviso legal</a> |
     <a href="contacto.html">Contacto</a>
   </p>
